package com.sejong.projectservice.core.enums;

public enum ProjectStatus {
    IN_PROGRESS,
    COMPLETED,
    ARCHIVED,
}
